--- a/code/src/classes/style.css
+++ b/code/src/classes/style.css
@@ -40,7 +40,7 @@ button:active {
   transform: scale(0.95);
 }
 
-body, .bas, select, input{
+body, .bas, select, input, textarea{
 	background-color: #00001e;
 }
 
@@ -51,7 +51,7 @@ body, .bas, select, input{
 	align-items: center;
 }
 
-select, input {
+select, input , textarea{
 	border-radius: 5px;
 	border: 2px solid  #f09819;
 }
@@ -103,7 +103,6 @@ form *{
 
 .artiste{
 	margin: 0.5%;
-	text-shadow: 2px 2px 10px #000000;
 }
 
 .bas{
@@ -123,7 +122,6 @@ form *{
 
 .infos{
 	display: flex;
-	/* background-color: green; */
 	width: 120px;
 	margin-top: -35px;
 	justify-content: space-evenly;
