--- a/code/src/classes/style.css
+++ b/code/src/classes/style.css
@@ -190,12 +190,12 @@ a {
 
 
 	.bg {
+		position:fixed;
 		border-radius: 20px 20px 0 0 ;
 		width: inherit;
 		height: inherit;
-		position:fixed;
-		display: inline-flex;
 		filter: blur(2px);
+		z-index: -1;
 	}
 
 }
