--- a/code/src/classes/style.css
+++ b/code/src/classes/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-	height: 100%;
+	height: 100vh;
 	margin: 0;
 }
 
@@ -73,6 +73,7 @@ form *{
 }
 
 .complexe{
+	height: 100%;
 	.bg{
 		position: fixed;
 		width: 100vw;
@@ -98,6 +99,7 @@ form *{
 
 .bas{
 	display: flex;
+	height: 100%;
 	flex-direction: column;
 	align-items: center;
 	margin: 0 -8px -8px -8px;
