--- a/code/src/classes/style.css
+++ b/code/src/classes/style.css
@@ -3,6 +3,7 @@
 	color: #f0f0f0;
 	font-size: 1em;
 	text-align: center;
+	z-index: 1;
 }
 
 body{
@@ -131,6 +132,15 @@ form *{
 	justify-content: space-evenly;
 }
 
+/* .infos_soiree{ */
+/* 	display: flex; */
+/* 	flex-direction: column; */
+/* 	width: 200px; */
+/* 	height: 100%; */
+/* 	margin-top: -35px; */
+/* 	justify-content: center; */
+/* } */
+
 .desc,iframe{
 	flex: 1 1 0px;
 	align-self: center;
@@ -183,28 +193,35 @@ a {
 		background-color: #000032ff;
 		margin: 0;
 		padding: 0;
+		height: 50%;
 		border-radius: 0 0 20px 20px ;
+		/* z-index: -1; */
 	}
 
 	h1 {
 		white-space: nowrap;
+		position: relative;
+		top: 75px;
 	}
 
 
 	.bg {
-		position:fixed;
 		border-radius: 20px 20px 0 0 ;
+		position: relative;
+		top: -50px;
 		width: inherit;
 		height: inherit;
 		filter: blur(2px);
+		transform: scale(1);
 		z-index: -1;
 	}
 
 }
 
-ul {
+ul{
 	display: flex;
 	flex-wrap: wrap;
+	width: 100%;
 	list-style: none;
 	justify-content: center;
 	/* align-items: center; */
@@ -214,7 +231,8 @@ ul {
 
 li{
 	transition: 0.5s;
-	flex: 0 0 300px;
+	width: 100px;
+	flex: 0 1 300px;
 	margin: 0 2%;
 	padding: 0;
 }
@@ -227,7 +245,7 @@ li:hover{
 }
 
 
-@media (max-width: 1000px) {
+@media (max-width: 800px) {
   .presentation {
     flex-direction: column;
   }
